# eolfix-rs

./: AGENTS.md  Cargo.toml  README.md  eolfix.schema.json
.kilo/plans/: 1784212977116-no-crlf-readme-and-spec.md
src/: convert.rs  ignore.rs  inspector.rs  main.rs  rules.rs
