[package]
name = "eolfix"
version = "0.1.0"
edition = "2021"
description = "Normalize line endings in a directory tree"
license = "MIT"
repository = "https://github.com/BobH-Official/no-crlf"

[[bin]]
name = "eolfix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "1.1.3"
walkdir = "2"
