[package]
name = "eolfix"
version = "0.0.1"
edition = "2021"
description = "Normalize line endings in a directory tree using content-based text detection"
license = "MPL-2.0"
repository = "https://github.com/BobH-Official/eolfix-rs"
readme = "README.md"
keywords = ["eol", "line-endings", "newline", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = ["crates-io"]
include = [
    "/LICENSE",
    "/README.md",
    "/eolfix.schema.json",
    "/src/**",
]

[[bin]]
name = "eolfix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "1.1.3"
walkdir = "2"
